[gd_scene load_steps=13 format=2]

[ext_resource path="res://UI/deflectnosoundtrimmed.webm" type="VideoStream" id=1]
[ext_resource path="res://TutorialScreen.gd" type="Script" id=2]
[ext_resource path="res://fonts/PixelTandysoft-0rJG.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=2]
size = 10
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.184314, 0.0431373, 0.0196078, 0.827451 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="DynamicFont" id=3]
size = 10
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.211765, 0.196078, 0.196078, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.211765, 0.196078, 0.196078, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.211765, 0.196078, 0.196078, 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.211765, 0.196078, 0.196078, 1 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.211765, 0.196078, 0.196078, 1 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.211765, 0.196078, 0.196078, 1 )

[node name="TutorialScreen" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="DescriptionText" type="RichTextLabel" parent="."]
margin_left = 14.0
margin_top = 144.0
margin_right = 381.0
margin_bottom = 186.0
rect_scale = Vector2( 0.8, 0.8 )
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[center]A Powerful Melee weapon that can cut through the toughest of enemies (    ). Damage increased when the player levels up. "
text = "A Powerful Melee weapon that can cut through the toughest of enemies (    ). Damage increased when the player levels up. "

[node name="TitleText" type="RichTextLabel" parent="."]
margin_left = 1.0
margin_top = 8.0
margin_right = 320.0
margin_bottom = 51.0
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[center]Tutorials "
text = "Tutorials "

[node name="Button" type="Button" parent="."]
margin_left = 9.0
margin_top = 7.0
margin_right = 63.0
margin_bottom = 27.0
rect_scale = Vector2( 0.5, 0.5 )
custom_styles/normal = SubResource( 1 )
text = "Return"

[node name="VideoPlayer" type="VideoPlayer" parent="."]
margin_left = 113.0
margin_top = 38.0
margin_right = 284.0
margin_bottom = 122.0
stream = ExtResource( 1 )
autoplay = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 14.0
margin_top = 40.0
margin_right = 98.0
margin_bottom = 151.0
rect_scale = Vector2( 0.8, 0.8 )

[node name="Button" type="Button" parent="VBoxContainer"]
margin_right = 84.0
margin_bottom = 13.0
custom_fonts/font = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
text = "Plasma Blade"

[node name="Button2" type="Button" parent="VBoxContainer"]
margin_top = 17.0
margin_right = 84.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 3 )
custom_styles/normal = SubResource( 5 )
text = "Deflection"

[node name="Button3" type="Button" parent="VBoxContainer"]
margin_top = 34.0
margin_right = 84.0
margin_bottom = 47.0
custom_fonts/font = SubResource( 3 )
custom_styles/normal = SubResource( 6 )
text = "Laser Eye"

[node name="Button4" type="Button" parent="VBoxContainer"]
margin_top = 51.0
margin_right = 84.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 3 )
custom_styles/normal = SubResource( 7 )
text = "Roll (Dodge)"

[node name="Button5" type="Button" parent="VBoxContainer"]
margin_top = 68.0
margin_right = 84.0
margin_bottom = 81.0
custom_fonts/font = SubResource( 3 )
custom_styles/normal = SubResource( 8 )
text = "Charge Stones"

[node name="Button6" type="Button" parent="VBoxContainer"]
margin_top = 85.0
margin_right = 84.0
margin_bottom = 98.0
custom_fonts/font = SubResource( 3 )
custom_styles/normal = SubResource( 9 )
text = "Leveling Up"

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="finished" from="VideoPlayer" to="." method="_on_VideoPlayer_finished"]
[connection signal="focus_entered" from="VBoxContainer/Button" to="." method="_on_Button_focus_entered"]
[connection signal="focus_entered" from="VBoxContainer/Button2" to="." method="_on_Button2_focus_entered"]
[connection signal="focus_entered" from="VBoxContainer/Button3" to="." method="_on_Button3_focus_entered"]
[connection signal="focus_entered" from="VBoxContainer/Button4" to="." method="_on_Button4_focus_entered"]
[connection signal="focus_entered" from="VBoxContainer/Button5" to="." method="_on_Button5_focus_entered"]
